--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" Href="index.css"/>
-        <script src="index.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js">
+        </script>
+        <script type="importmap">
+            {
+                "imports": {
+                "three": "https://unpkg.com/three@0.153.0/build/three.module.js",
+                "three/addons/": "https://unpkg.com/three@0.153.0/examples/jsm/"
+                }
+            }
+        </script>
     </head>
     <body>
+        <div class="container">
+            <div class="prompt-box">
+                <input type=text id="prompt" placeholder="name your seedling here" required/>
+            </div>
+        </div>
+        <script type="module" src="index.js"></script>
     </body>
 </html>
