why is there a white color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <div class="container">
             <div class="prompt-box">
-                <input type=text id="prompt" placeholder="name your seedling here" required/>
+                <input type=text id="prompt" placeholder="name your seedling" required/>
             </div>
         </div>
         <script type="module" src="index.js"></script>
